--- a/main.html
+++ b/main.html
@@ -7,9 +7,7 @@
 
   <body class="body">
     <h5 class="nav-bar">  
-      <div class="add-button">Add</div>
-      <div class="edit-button">Edit</div>
-      <div class="delete-button">Delete</div>
+      <div class="add-button">Add Card</div>
     </h5>
 
     <h1 class="header">
@@ -18,8 +16,22 @@
 
     <div class="card-positions">
       <div class="card">First Card</div>
+      <div class="edit-button"><button type="button">Edit Card</button></div>
+      <div class="delete-button"><button type="button">Delete Card</button></div>
     </div>
   
     <script src="js.index"></script>
   </body>
 </html>
+
+
+
+<!-- <form id="new-flash">
+  Title:<br>
+  <input id="name" type="text" name="title"><br>
+  Info:<br>
+  <textarea id="info" rows="4" cols="50">
+  Enter in flashcard info.
+  </textarea> <br>
+  <button type="submit" id="add">Create</button>
+</form> -->
